<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#222"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/serviceStateTextView"
        android:text="@string/servicestate"
        style="@style/textViewWhite"
        android:layout_margin="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signalStrength"
        android:text="@string/signalstrength"
        android:layout_margin="8dp"
        style="@style/textViewWhite"
        android:layout_below="@+id/serviceStateTextView"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latLngTextView"
        android:text="@string/location"
        style="@style/textViewWhite"
        android:layout_below="@+id/signalStrength"
        android:layout_margin="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accuracyTextView"
        android:text="@string/accuracy"
        style="@style/textViewWhite"
        android:layout_below="@+id/latLngTextView"
        android:layout_margin="8dp"
    />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        style="@style/dividerWhite"
        android:id="@+id/divider"
        android:layout_below="@+id/accuracyTextView"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        >
    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkinsFound"
        android:text="@string/checkinsfound"
        style="@style/textViewWhite"
        android:layout_below="@+id/divider"
        android:layout_margin="8dp"
        />



    <android.widget.IconButton
        android:text="{fa-crosshairs} Sync"
        android:shadowColor="#22000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"
        style="@style/greenBtt"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/syncBtt"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_vertical|center_horizontal"/>

</RelativeLayout>
